--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "is-promise": "^2.0.0",
     "jake": "8.0.x",
     "mime": "1.2.x",
-    "model": "6.0.x",
+    "model": "github:geddy/model",
     "tlsopts": "0.0.1",
     "utilities": "1.0.x"
   },
